--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -138,7 +138,7 @@ services:
     mempool-web:
         image: ghcr.io/retropex/mempoolfrontend:v3.3.0-dev
         restart: unless-stopped
-        stop_grace_period: 10s
+        stop_grace_period: 1m
         command: "./wait-for mempool-db:3306 --timeout=720 -- nginx -g 'daemon off;'"
         environment:
             FRONTEND_HTTP_PORT: "8998"
@@ -150,7 +150,7 @@ services:
     mempool-api:
         image: ghcr.io/retropex/mempoolbackend:v3.3.0-dev
         restart: unless-stopped
-        stop_grace_period: 10s
+        stop_grace_period: 1m
         extra_hosts:
             - "host.docker.internal:host-gateway"
             - "host.containers.internal:host-gateway"
@@ -184,7 +184,7 @@ services:
     mempool-db:
         image: docker.io/mariadb:10.5.21
         restart: unless-stopped
-        stop_grace_period: 10s
+        stop_grace_period: 1m
         environment:
             MYSQL_DATABASE: "mempool"
             MYSQL_USER: "mempool"
